<resources>
    <string name="app_name_release">Humara Nagar</string>
    <string name="app_name_qa" translatable="false">Nagar QA</string>
    <string name="title_home">Home</string>
    <string name="grievances">Grievances</string>
    <string name="residents">Residents</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="and">and</string>
    <string name="terms_amp_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
    <string name="continue_text">Continue</string>
    <string name="country_code" translatable="false">+91</string>
    <string name="phone_number">Mobile Number</string>
    <string name="we_notify">We Notify</string>
    <string name="we_connect">We Connect</string>
    <string name="we_solve">We Solve</string>
    <string name="we_listen">We Listen</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="otp_sent_to">OTP sent to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="timer_count" translatable="false">(0:%s)</string>
    <string name="please_enter_a_valid_10_digit_mobile_number">Please enter a valid 10 digit mobile number</string>
    <string name="incorrect_otp_message">Incorrect OTP, Please Try again</string>
    <string name="almost_there">Almost There!</string>
    <string name="provide_your_details_here">Please provide your details here</string>
    <string name="asterisk" translatable="false">*</string>
    <string name="name">Name</string>
    <string name="father_or_spouse_name">Father/Spouse’s Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="dob_invalid_message">You must be 18 years or older</string>
    <string name="otp_sent_to_s">OTP sent to %s</string>
    <string name="some_error_occoured">Please try again later after some time.</string>
    <string name="error">Something went wrong</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_message">You are offline, Please check your internet connection.</string>
    <string name="session_expired_message">Session has expired. Kindly Login again</string>
    <string name="logout">Logout</string>
    <string name="reportIssueTitle">Report Issue</string>
    <string name="selectCategory">Select Category</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="comment">Comments</string>
    <string name="addImage">Add Image</string>
    <string name="uploadImageDescription">Upload the images of issue</string>
    <string name="permission_required_title">Permission Required</string>
    <string name="imagePickingLimit">You can add total 2 images</string>
    <string name="trackYourPastComplaints">Track Your Past Complaints</string>
    <string name="history">History</string>
    <string name="past_complaints">Past Complaints</string>
    <string name="all_complaints">All Complaints</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="anErrorOccurred">An error occurred, please try again</string>
    <string name="ward_no">Ward No.</string>
    <string name="select_ward">Select Ward</string>
    <string name="ward_s">Ward #%s</string>
    <string name="sent">Sent</string>
    <string name="inprogress">In Progress</string>
    <string name="resolved">Resolved</string>
    <string name="resolvedOn">Resolved on %s</string>
    <string name="resolutionExpectedBy">Resolution by %s</string>
    <string name="update">Update</string>
    <string name="pending_approval_message">You are not yet onboarded on Humara Nagar App. Please reach out to the municipal corporation of your ward to get you started.</string>
    <string name="you_can_still_enter_location_manually">Please enter location manually</string>
    <string name="please_provide_requested_permission">Please provide requested permission</string>
    <string name="camera_permission_denied_message">Please grant Camera permission to take photo</string>
    <string name="storage_permission_denied_message">Please grant Storage permission to choose file</string>
    <string name="location_permission_denied_message">Please provide Location permission to auto-fill the location details</string>
    <string name="camera_permission">Camera</string>
    <string name="storage_permission">Storage</string>
    <string name="location_permission">Location</string>
    <string name="permnanetly_denied_permission_message">It seems you permanently denied %s permission. You can go to the app setting to grant permission</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="notification_permission_denied_message">Please enable notification to never miss an update</string>
    <string name="no_image_selected">No image selected</string>
    <string name="location_detection_error_message">Error auto-detecting location. Please enter location manually</string>
    <string name="comments_short_hint">Don\'t hold back! Tell us everything and we\'ll do our best to make things right</string>
    <string name="no_image_clicked">No image clicked</string>
    <string name="complaint_raised">Complaint raised</string>
    <string name="complaint_raised_subtitle">We will do our best to resolve the issue</string>
    <string name="track">Track</string>
    <string name="invalid_input">Invalid input</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="finish">Finish</string>
    <string name="rate_this_service">Please rate this service</string>
    <string name="provide_more_details">Provide more details</string>
    <string name="confirm">Confirm</string>
    <string name="call">Call</string>
    <string name="age">Age</string>
    <string name="fellow_residents">Fellow Residents</string>
    <string name="review">Review</string>
    <string name="you_rated_this_service">You rated this service</string>
    <string name="details">Details</string>
    <string name="thank_you_for_the_rating">Thank you for the rating</string>
    <string name="complaint_successfully_withdrawn">Complaint withdrawn</string>
    <string name="complaint_acknowledgment_sent">Complaint acknowledgement sent</string>
    <string name="complaint_resolved">Complaint resolved</string>
    <string name="no_complaints_message">Nothing to manage yet! Start by creating a new complaint</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="map_location_not_available_message">Exact location is not available. Please call the resident</string>
    <string name="rating_for_this_service">Rating for this service</string>
    <string name="no_rating_received">No rating received</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="app_version_d">App Version: %s</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="choose_language">Choose Language</string>
    <string name="post">Post</string>
    <string name="know_what_s_happening_in_your_town">Know what\'s happening \nin your town!</string>
    <string name="like_button_error_message">Like update failed</string>
    <string name="leave_you_thoughts_here">Leave you thoughts here</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="just_now">Just now</string>
    <string name="you_can_see_how_people_vote">You can see how people vote</string>
    <string name="retry">Retry</string>
    <string name="error_loading_comments">Error loading comments</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_warning_message">Are you sure you want to permanently remove this post?</string>
    <string name="post_deleted">Post deleted</string>
    <string name="share_post">Share Post</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="upload_from_gallery">Select from gallery</string>
    <string name="create_a_poll">Create a poll</string>
    <string name="done">Done</string>
    <string name="your_question">Your question</string>
    <string name="type_your_question">Type your question</string>
    <string name="poll_duration">Poll duration</string>
    <string name="add_option">Add option</string>
    <string name="plus_add_option">+ Add Option</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="edit_post">Edit Post</string>
    <string name="save">Save</string>
    <string name="set_your_profile_picture">Set your profile picture</string>
    <string name="profile_photo_selection_title">In case you are shy we have selected a cool avatar for you. You can edit this later.</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="n_days_left">%dd left</string>
    <string name="n_hours_left">%dh left</string>
    <string name="completed">Completed</string>
    <string name="share_post_caption">Checkout this post by %1$s on Humara Nagar.\n%2$s</string>
    <string name="no_document_selected">No document selected</string>
    <string name="document_file_size_error_message">Maximum file size should be %dMB</string>
    <string name="video_file_size_error_message">Maximum video size should be %dMB</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="with_cooperation">With cooperation:</string>
    <string name="amit_gupta">Amit Gupta</string>
    <string name="sponsor_ward_number">Ward 11</string>
    <string name="no_video_selected">No Video selected</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="auto_detect_my_location">Auto-detect my location</string>
    <string name="search_by_name">Search by name</string>
    <string name="n_years">%d years</string>
    <string name="no_results_found">No results found for \"%s\"</string>
    <string name="add_user">Add User</string>
    <string name="add_user_message">To continue, please fill in the mobile number of the User</string>
    <string name="by_sharing_otp_user_agrees_to_our">By sharing OTP user agrees to our</string>
    <string name="mobile_number_already_belong_to_a_user">Mobile number already belong to a user. Please try again with a different number</string>
    <string name="otp_expired_message">OTP expired. Resend OTP</string>
    <string name="role">Role</string>
    <string name="please_provide_user_details_here">Please provide user details here</string>
    <string name="sure_you_want_to_exit">Sure you want to exit?</string>
    <string name="user_exit_confirmation_message">All your progress would be lost</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="user_successfully_added">User successfully added</string>
    <string name="change_image">Change Image</string>
    <string name="tell_us_a_bit_about_yourself">Tell us a bit about yourself</string>
    <string name="about_me">About Me</string>
</resources>