<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_primary_color_bottom_curved_bg"
            android:paddingHorizontal="20dp"
            android:paddingVertical="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@id/tvSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/OpenSansSemiBold20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_user"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle"
                style="@style/OpenSansRegular14sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/please_provide_user_details_here"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/sv_form"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintTop_toBottomOf="@id/cl_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingTop="30dp">

                <com.humara.nagar.ui.custom_views.FormSpinnerWithHeader
                    android:id="@+id/input_role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="@string/role"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:header="@string/name"
                    app:layout_constraintTop_toBottomOf="@id/input_role" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/input_guardian_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:header="@string/father_or_spouse_name"
                    app:layout_constraintTop_toBottomOf="@id/input_name" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:endIcon="@drawable/ic_verified_tick"
                    app:header="@string/phone_number"
                    app:inputEnabled="false"
                    app:layout_constraintTop_toBottomOf="@id/input_guardian_name"
                    app:required_input="false" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/input_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:header="@string/date_of_birth"
                    app:hint="DD-MM-YYYY"
                    app:layout_constraintTop_toBottomOf="@id/input_phone_number" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_gender"
                    style="@style/OpenSansSemiBold14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/gender"
                    android:textColor="@color/grey_4F4F4F"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_dob" />

                <HorizontalScrollView
                    android:id="@+id/svGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender">

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/toggle_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:selectionRequired="true"
                        app:singleSelection="true" />

                </HorizontalScrollView>

                <com.humara.nagar.ui.custom_views.FormSpinnerWithHeader
                    android:id="@+id/input_ward"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:header="@string/ward_no"
                    app:hint="@string/select_ward"
                    app:layout_constraintTop_toBottomOf="@id/svGender" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_submit"
            style="@style/primary_blue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="30dp"
            android:enabled="false"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>