<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnCross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/OpenSansSemiBold18sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/create_a_poll"
                android:textColor="@color/dark_grey_333333"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDone"
                app:layout_constraintStart_toEndOf="@id/btnCross"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnDone"
                style="@style/TextButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="4dp"
                android:text="@string/done"
                android:textColor="@color/primary_blue_button_background_selector"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dividerTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_E4E4E4"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="30dp">

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/inputQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="@string/your_question"
                    app:hint="@string/type_your_question"
                    app:layout_constraintTop_toTopOf="parent"
                    app:maximumLength="100"
                    app:minimumHeight="200" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/inputFirstOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:header="@string/option_1"
                    app:hint="@string/add_option"
                    app:layout_constraintTop_toBottomOf="@id/inputQuestion"
                    app:maximumLength="40" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/inputSecondOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:header="@string/option_2"
                    app:hint="@string/add_option"
                    app:layout_constraintTop_toBottomOf="@id/inputFirstOption"
                    app:maximumLength="40" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/inputThirdOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    app:header="@string/option_3"
                    app:hint="@string/add_option"
                    app:layout_constraintTop_toBottomOf="@id/inputSecondOption"
                    app:maximumLength="40"
                    app:required_input="false" />

                <com.humara.nagar.ui.custom_views.FormInputWithHeader
                    android:id="@+id/inputFourthOption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    app:header="@string/option_4"
                    app:hint="@string/add_option"
                    app:layout_constraintTop_toBottomOf="@id/inputThirdOption"
                    app:maximumLength="40"
                    app:required_input="false" />

                <Button
                    android:id="@+id/btnAddOption"
                    style="@style/TextButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/plus_add_option"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/inputFourthOption" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_header"
                    style="@style/OpenSansSemiBold14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/poll_duration"
                    android:textColor="@color/grey_4F4F4F"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnAddOption"
                    app:layout_goneMarginTop="4dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_box"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColorHint="@android:color/darker_gray"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_header">

                    <AutoCompleteTextView
                        android:id="@+id/pollDurationSpinner"
                        style="@style/OpenSansRegular14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="0"
                        android:inputType="none"
                        android:paddingTop="10dp"
                        android:textColor="@color/dark_grey_333333" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>